# blaze-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/blaze_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
src/blaze_mcp/prompts/: __init__.py
src/blaze_mcp/resources/: __init__.py
src/blaze_mcp/tools/: __init__.py  admin.py  advanced.py  connection.py  crud.py  search.py  terminology.py
tests/: __init__.py  test_client.py
